green_app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: green-app
  name: green-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: green-app
  template:
    metadata:
      labels:
        app: green-app
    spec:
      containers:
      - args:
        - -listen=:8081
        - -text=i am green
        image: hashicorp/http-echo
        ports:
        - containerPort: 8081
        name: http-echo
