green_app_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: green-app
  name: green-app
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: green-app
